- Responsive design improvements - Security improvements: password encoding and default role assignment